--- a/ecommerce/public/index.html
+++ b/ecommerce/public/index.html
@@ -15,6 +15,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
+
   <title>Lotus</title>
 </head>
 
