--- a/ecommerce/public/index.html
+++ b/ecommerce/public/index.html
@@ -17,6 +17,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=News+Cycle:wght@700&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@600&family=News+Cycle:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Lotus</title>
 </head>
 
